@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: set.c,v 1.38 2000/09/20 00:59:25 joze Exp $"); }
+static char *RCSid() { return RCSid("$Id: set.c,v 1.39 2000/10/06 03:56:38 joze Exp $"); }
 #endif
 
 /* GNUPLOT - set.c */
@@ -1073,9 +1073,8 @@ set_arrow()
     struct arrow_def *prev_arrow = NULL;
     struct position spos, epos, headsize;
     struct lp_style_type loc_lp;
-    int axes = FIRST_AXES;
     int tag;
-    TBOOLEAN set_start, set_end, head = 1, set_axes = 0;
+    TBOOLEAN set_start, set_end, head = 1;
     TBOOLEAN set_line = 0, set_headsize = 0, set_layer = 0;
     TBOOLEAN relative = 0;
     int layer = 0;
@@ -1091,8 +1090,7 @@ set_arrow()
 	&& !equals(c_token, "from")
 	&& !equals(c_token, "to")
 	&& !equals(c_token, "rto")
-	&& !equals(c_token, "first")
-	&& !equals(c_token, "second")) {
+	) {
 	/* must be a tag expression! */
 	tag = (int) real(const_express(&a));
 	if (tag <= 0)
@@ -1100,15 +1098,10 @@ set_arrow()
     } else
 	tag = assign_arrow_tag();	/* default next tag */
 
-    if (!END_OF_COMMAND && equals(c_token, "first")) {
-	++c_token;
-	axes = FIRST_AXES;
-	set_axes = 1;
-    } else if (!END_OF_COMMAND && equals(c_token, "second")) {
-	++c_token;
-	axes = SECOND_AXES;
-	set_axes = 1;
-    }
+    /* HBB 20001018: removed code here that accepted 'first' or
+     * 'second' keywords. The resulting variables 'axes' and
+     * 'set_axes' effected nothing, anyway --> deleted them, too. */
+
     /* get start position */
     if (!END_OF_COMMAND && equals(c_token, "from")) {
 	c_token++;
@@ -1156,6 +1149,7 @@ set_arrow()
 	get_position(&spos);
 	set_start = TRUE;
     }
+
     if (!END_OF_COMMAND && equals(c_token, "nohead")) {
 	c_token++;
 	head = 0;
